# employee-metric

./: .gitignore  .pre-commit-config.yaml  employee_metric.py  pyproject.toml  tests.py
employee_metric/: __init__.py  gitlab.py  metric.py
