[tool.poetry]
name = "employee_metric"
version = "0.1.0"
description = ""
authors = ["tmcgroul <safonov.a.r@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "3.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
