[tool.poetry]
name = "employee_metric"
version = "0.1.0"
description = ""
authors = ["tmcgroul <safonov.a.r@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
python-gitlab = "2.10"

[tool.poetry.dev-dependencies]
pytest = "5.2"
flake8 = "3.9.2"
pre-commit = "2.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
